# political_bias_inference_web_app

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yaml
.github/workflows/: ci.yaml
aws_scripts/lambda/: SERVICE_ARNS.json  SERVICE_CONFIG.json  lambda_apprunner_start.py  lambda_apprunner_stop.py
services/ml_inference/: .dockerignore  Dockerfile  Dockerfile.dev  dev_requirements.txt  entrypoint.dev.sh  entrypoint.service.sh  pyproject.toml  requirements.prod.txt
services/ml_inference/src/: .env.example  __init__.py  app.py
services/ml_inference/src/aws_scripts/: aws_export_role.sh  download_model_artifacts.py
services/ml_inference/src/middleware/: internal_auth.py
services/ml_inference/src/ml_inference_app/: .env.example  __init__.py  app.py
services/ml_inference/src/ml_inference_app/middleware/: __init__.py  internal_auth.py
services/ml_inference/src/ml_inference_app/models/: articles-bypublisher_LabelEncoder_v1.joblib
services/ml_inference/src/ml_inference_app/schemas/: prediction_schema.py
services/ml_inference/tests/: conftest.py  test_health.py  test_predict.py
services/ml_inference/wheels/: utils-0.1.2-py3-none-any.whl  utils-0.1.3-py3-none-any.whl
web_app/client/: package-lock.json
web_app/server/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  entrypoint.dev.sh  entrypoint.server.sh  jest.config.ts  package-lock.json  package.json  tsconfig.json
web_app/server/public/: public.css  public.html  public.ts
web_app/server/src/: app.ts
web_app/shared/: package-lock.json  package.json  schemas.ts  tsconfig.json
(+23 files in other folders)
